more css fixed on forecast page with nav z-index.

--- a/client-side/src/component/Forecast/Forecast.css
+++ b/client-side/src/component/Forecast/Forecast.css
@@ -27,6 +27,10 @@
     justify-content: center;
     /* top: 25%; */
     transition: all 0.3s;
+    position: fixed;
+    top: 50px;
+    width: 100%;
+    height: 100%;
   }
 
   .map {
@@ -53,10 +57,10 @@
   }
 
   .forecastBody {
-    position: relative;
+    position: absolute;
     top: 10vh;
-    /* left: 50%;
-    transform: translateX(-50%); */
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
     justify-content: center;
     align-items: center;
